# cargo-actix-openapi

./: Cargo.toml  README.md
examples/: openapi.yaml  server.rs
src/: generator.rs  lib.rs  main.rs  openapictx.rs
src/generator/: models.rs  templates.rs  utils.rs
src/generator/models/: types.rs
src/generator/static/: api.tera  default.tera  docs.html  enum.tera  error.tera  struct.tera
tests/: common.rs  test_specs.rs
tests/expected/: anyof.rs  anyof.yaml  default_parameter.rs  default_parameter.yaml  enum.rs  enum.yaml  error.rs  error.yaml  helloworld.rs  helloworld.yaml  mixed_api.rs  mixed_api.yaml  ratelimit.rs  ratelimit.yaml  reference.rs  reference.yaml  request_body.rs  request_body.yaml  request_body_nested.rs  request_body_nested.yaml
tests/openapi/: anyof.yaml  default_parameter.yaml  enum.yaml  error.yaml  helloworld.yaml  mixed_api_v1.yaml  mixed_api_v2.yaml  ratelimit.yaml  reference.yaml  request_body_nested.yaml  response_body.yaml
