[package]
name = "cargo-actix-openapi"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
serde_repr = "*"
openapiv3 = "*"
anyhow = "*"
convert_case = "*"
indexmap = "*"
slug = "*"
tera = "1"


[dev-dependencies]
pretty_assertions = "*"
rstest = "*"
