[package]
name = "cargo-actix-openapi"
version = "1.0.0"
edition = "2021"
description = "Generates actix-web implementation for the given openapi spec"


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
serde_repr = "*"
openapiv3 = "*"
anyhow = "*"
convert_case = "*"
indexmap = "*"
slug = "*"
tera = "1"
clap = { version = "*", features = ["derive"] }


[dev-dependencies]
pretty_assertions = "*"
rstest = "*"
