[package]
name = "cargo-actix-openapi"
version = "1.0.0"
edition = "2021"
description = "Generates actix-web implementation for the given openapi spec"


[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
convert_case = "0.6.0"
indexmap = "1.9.2"
openapiv3 = "1.0.2"
pathdiff = "0.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.10"
serde_yaml = "0.9.16"
slug = "0.1.4"
tera = "1.17.1"


[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
